# dsvtools

./: .gitignore  LICENSE  README.md  pyproject.toml
dsvtools/: dsvread.py  dsvread_INF.py  gr2trj.py  trj_normalization.py
dsvtools/contrib/: cfl.py
